fixed text to be responsive, display mode to shift on almost-square ratio
also fixed summary box sizing, margins and padding

--- a/styles-solarized.css
+++ b/styles-solarized.css
@@ -102,12 +102,13 @@ body {
 }
 
 .navLogo {
-    height: 2.5dvh;
+    height: 1.3em;
     filter: drop-shadow(3px 3px 5px var(--textLL));
 }
 
 .mainContent {
     display: flex;
+    flex-wrap: wrap;
     height: 100%;
 }
 
@@ -117,14 +118,17 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
+    margin: 2vw;
 }
 
 .textContainer {
     text-align: right;
+    /* TODO USE THIS TO FIX TEXT WRAPPING */
+    width: 90%;
 }
 
 .nameTag {
-    font-size: 4dvh;
+    font-size: 5dvh;
     font-weight: bolder;
     animation: opacity 1s, shadow 1s;
     filter: drop-shadow(1dvw 1dvh 10px var(--textLL)) opacity(100%);
@@ -216,17 +220,16 @@ body {
     border-radius: 1dvw;
     height: 0;
     transition: height 0.5s;
-    overflow: auto;
+
 }
 
 #exampleSummary {
     display: none;
     flex-direction: column;
-    padding: 1dvh 0;
-    margin: 1dvh 1dvw 0 1dvw;
+    padding: 1.5dvh 0 1dvh;
+    margin: 0 1dvw;
     font-family: "Ubuntu Sans", "PT Sans", -apple-system, system-ui,
         BlinkMacSystemFont, "Noto Sans", sans-serif;
-    overflow: auto;
 }
 
 #exampleSummary a {
@@ -250,7 +253,7 @@ body {
 
 
 /* FOR MOBILE */
-@media (orientation: portrait) {
+@media (orientation: portrait) or (max-aspect-ratio: 1.05/1) {
     .navLeft {
         margin-left: 2dvw;
     }
@@ -311,9 +314,9 @@ body {
 }
 
 /* for small laptop screens */
-@media (min-aspect-ratio: 2/1) and (max-height:700px) {
+@media (orientation: landscape) and (max-height: 800px) {
     body {
-        font-size: 2.25dvh;
+        font-size: 2.5dvh;
     }
 
     .exampleImage {
